--- a/src/util/Makefile.am
+++ b/src/util/Makefile.am
@@ -24,8 +24,7 @@ SUBDIRS = . \
 	tests/fast_idiv_by_const \
 	tests/hash_table \
 	tests/string_buffer \
-	tests/set \
-	tests/uint_inverse
+	tests/set
 
 if HAVE_STD_CXX11
 SUBDIRS += tests/vma
